Implement auth tokens, debug api
